# hello-world

./: Dockerfile  docker_build.sh  docker_run.sh  pyproject.toml  run_app.sh  setup_venv.sh
src/: main.py
